Tuned Home Page CSS - Rename class name (for readability) - Add block paddings for brand and nav icons - Add padding for body - Root font size uses vmax for portrait layout RWD - Fix edge CSS cases

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -60,6 +60,7 @@ $ColorTextWarm: $ColorGreige;
   margin: unset;
 }
 a {
+  cursor: unset;
   display: block;
   color: unset;
   text-decoration: unset;
